Content stretch fix

--- a/themes/podcast/assets/scss/main.scss
+++ b/themes/podcast/assets/scss/main.scss
@@ -12,10 +12,16 @@ h3 {
   font-weight: bold;
 }
 
+.container-fluid {
+  min-height: 100vh;
+  .row {
+    min-height: 100vh;
+  }
+}
+
 .left-sidebar {
   background: #fff;
   padding: 48px;
-
   .static-content {
     h1 {
       font-size: 24px;
